  * Fixed a leak in XS_Xchat_get_list(Vincent Pit)
  * Change Xchat::register so that scripts calling it without a name or
    version will still show up in the plugins and scripts window.
  * Added calls to PERL_SYS_INIT3 and PERL_SYS_TERM which are required on
    some platforms
  * Added some additional guards to prevents bits of scripts from spilling
    into each other

------------------------------------------------------------------------------
 2.8.6 - 11/Jun/2008
------------------------------------------------------------------------------

 - Updated translations (de, fi, fr, hu, lt, nb, ru, th, zh_CN).
 - Fixed creation of ~/.xchat2/scrollback/ paths (xc284-scrollbmkdir.diff).
 - Fixed a leak of file descriptors related to the scrollback feature
   (resource leak) (xc284-fix-scrollbfdleak.diff).
 - Stopped scrollback files growing too large by fixing the file-shrink code.
 - Put a "Display scrollback from previous session" into the Setup GUI
   (logging section) so people can turn this off without typing commands.
 - Made /away work even when the reason setting is empty.
 - Using /part on a channel that contains a quotation mark now works [1800855].
 - Changed the default encoding to "IRC" (CP1252/Unicode Hybrid) for both Unix
   and Windows.
 - Fixed a possible Channel List crash if you searched many times while the
   download was still going.
 - Fixed alert balloons failing if the text contained "<" characters [1827629].
 - The Drag&Drop files to userlist feature has been enabled again.
 - Removed the /set tab_icons setting and made it automatic (see FAQ for more
   info about icons).
 - Fixed a bug in creating files (save channel list, rawlog etc) that would set
   the wrong permissions.
 - Added command line argument --command=COMMAND which can be used in
   conjuction with --existing (E.K.L.). This sends any xchat command to an
   existing (running) client.
 - A private SSL key/certificate can now be loaded from ~/.xchat2/client.pem.