@@ -29,6 +29,11 @@ highlights. The full CVS log is available at www.xchat.org/cvslog/
     some platforms
   * Added some additional guards to prevents bits of scripts from spilling
     into each other
+  * Added "modes", "win_ptr" and "xchatdirfs" to the list of keys that are
+    returned by context_info()
+  * Changed the information displayed in the "Plugins & Scripts" for scripts
+    that do not call register() to show up as "" for the name and description
+    and "unknown" for the version
 
 ------------------------------------------------------------------------------
  2.8.6 - 11/Jun/2008
